# jabsocket

./: AllTests.c  CMakeLists.txt  LICENSE  README.md  TODO  base64.c  base64.h  base64_test.c  cmanager.c  cmanager.h  config_test.c  framer.c  framer.h  framer_test.c  jabsocket.conf  jabsocketConfig.h  jabsocketConfig.h.in  log.c  log.h  main.c  parseconfig.c  parseconfig.h  rqparser.c  rqparser.h  rqparser_test.c  streamparse.c  streamparse.h  streamparse_test.c  util.c  util.h  util_test.c  websockframe.c  websockframe.h  websockframe_test.c  wsmessage.c  wsmessage.h  wsmessage_test.c  wsserver.c  wsserver.h
cmake/Modules/: FindEvent.cmake  FindExpat.cmake  FindYAML.cmake
doc/: Makefile  README  README.md  jabsocket.ad  jabsocket.html
test/: WSClient.py  conftest.py  jabsocket-noorigin.conf  jabsocket-noresource.conf  jabsocket-regex.conf  jabsocket.conf  test_handshake.py  test_protocol.py  util.py
utils/: README.md  makewsmessage.py
